# lattice-carving

./: .gitignore  CLAUDE.md  DEVLOG.md  IMPLEMENTATION_STATUS.md  LATTICE_STRUCTURE_EXPLAINED.md  PLAN.md  PLAN_visualization.md  README.md  pyproject.toml  requirements.txt
examples/: animate_carving.py  basic_seam_carving.py  create_test_images.py  debug_lattice_carving.py  generate_demo_data.py  generate_pipeline_figure.py  reproduce_figures.py  roundtrip_heatmap.py  seam_overlay_diagnostic.py  segment_river_demo.py  show_lattice_space.py  test_carving_comparison.py  test_lattice_from_points.py  test_lattice_mapping.py  test_lattice_visualization.py  visualize_lattice_carving.py  visualize_lattice_space.py  visualize_real_bagel.py
src/: __init__.py  carving.py  energy.py  lattice.py  roi_extraction.py  seam.py
tests/: conftest.py  test_carving.py  test_energy.py  test_lattice.py  test_seam.py  test_smoothing.py
web/: app.js  curve_drawer.html  demo_config.js  generate_gif_comparison.py  generate_seam_carving_gif.py  index.html  style.css
